--- a/src/main/resources/Insert_Port_Server.fxml
+++ b/src/main/resources/Insert_Port_Server.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.GUI.GUIController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0">
          <image>
@@ -19,6 +19,6 @@
             <Image url="@Publisher material/Title 2000x618px.png" />
          </image>
       </ImageView>
-      <Button fx:id="connectButtonRMI" layoutX="259.0" layoutY="261.0" mnemonicParsing="false" onAction="#OnClickConnectRMIButton" prefHeight="41.0" prefWidth="81.0" text="Connect" />
+      <Button fx:id="connectButtonRMI" layoutX="259.0" layoutY="261.0" mnemonicParsing="false" onAction="#onClickConnectRMIButton" prefHeight="41.0" prefWidth="81.0" text="Connect" />
    </children>
 </AnchorPane>
