--- a/src/main/resources/FirstView.fxml
+++ b/src/main/resources/FirstView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.GUI.GUIController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0">
          <image>
@@ -18,11 +18,11 @@
             <Image url="@Publisher material/Box noshadow 280x280.png" />
          </image>
       </ImageView>
-      <Button fx:id="quitButton" layoutX="499.0" layoutY="356.0" mnemonicParsing="false" onAction="#OnQuitButton" prefHeight="30.0" prefWidth="84.0" text="QUIT">
+      <Button fx:id="quitButton" layoutX="499.0" layoutY="356.0" mnemonicParsing="false" onAction="#onQuitButton" prefHeight="30.0" prefWidth="84.0" text="QUIT">
          <font>
             <Font name="Calibri Bold" size="18.0" />
          </font>
       </Button>
-      <Button fx:id="playButton" layoutX="187.0" layoutY="72.0" mnemonicParsing="false" onAction="#OnPlayButton" opacity="0.0" prefHeight="247.0" prefWidth="222.0" />
+      <Button fx:id="playButton" layoutX="187.0" layoutY="72.0" mnemonicParsing="false" onAction="#onPlayButton" opacity="0.0" prefHeight="247.0" prefWidth="222.0" />
    </children>
 </AnchorPane>
