--- a/src/main/resources/Insert_Username.fxml
+++ b/src/main/resources/Insert_Username.fxml
@@ -5,40 +5,35 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.GUI.GUIController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="720.0" fitWidth="1280.0">
+      <ImageView fitHeight="400.0" fitWidth="600.0">
          <image>
             <Image url="@misc/sfondo parquet.jpg" />
          </image>
       </ImageView>
-      <Pane layoutX="363.0" layoutY="213.0" opacity="0.9" prefHeight="117.0" prefWidth="550.0" style="-fx-background-color: lightgray;">
-         <children>
-            <Text layoutX="22.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert Your Username:" translateX="75.0" translateY="30.0">
-               <font>
-                  <Font name="System Bold" size="36.0" />
-               </font>
-            </Text>
-         </children>
-      </Pane>
-      <TextField layoutX="420.0" layoutY="362.0" prefHeight="59.0" prefWidth="436.0" text="Username">
+      <TextField layoutX="187.0" layoutY="184.0" prefHeight="39.0" prefWidth="226.0" text="Username">
          <font>
-            <Font size="24.0" />
+            <Font size="14.0" />
          </font>
       </TextField>
-      <Button fx:id="submitUsernameButton" layoutX="564.0" layoutY="454.0" mnemonicParsing="false" onAction="#OnClickUSubmitUsernameButton" prefHeight="69.0" prefWidth="133.0" text="Submit">
+      <Button fx:id="submitUsernameButton" layoutX="252.0" layoutY="253.0" mnemonicParsing="false" onAction="#onClickUSubmitUsernameButton" prefHeight="27.0" prefWidth="96.0" text="Submit">
          <font>
-            <Font size="24.0" />
+            <Font size="14.0" />
          </font>
       </Button>
-      <ImageView fitHeight="142.0" fitWidth="416.0" layoutX="430.0" layoutY="64.0">
+      <ImageView fitHeight="107.0" fitWidth="296.0" layoutX="152.0" layoutY="24.0">
          <image>
             <Image url="@Publisher material/Title 2000x618px.png" />
          </image>
       </ImageView>
+      <Text layoutX="199.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert Your Username" wrappingWidth="201.4700927734375">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
