--- a/src/main/resources/Re_Connection_Requests.fxml
+++ b/src/main/resources/Re_Connection_Requests.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.View.GUI.GUIController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0">
          <image>
@@ -37,7 +37,7 @@
                         <Insets />
                      </HBox.margin>
                   </Pane>
-                  <Button fx:id="noButtonReConnection" mnemonicParsing="false" onAction="#OnClickNoReconnect" text="No" />
+                  <Button fx:id="noButtonReConnection" mnemonicParsing="false" onAction="#onClickNoReconnect" text="No" />
                </children>
             </HBox>
          </children>
