--- a/src/main/resources/Select_Number_Of_Players.fxml
+++ b/src/main/resources/Select_Number_Of_Players.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0">
          <image>
@@ -27,25 +26,16 @@
             </Text>
          </children>
       </Pane>
-      <TextField layoutX="420.0" layoutY="362.0" prefHeight="59.0" prefWidth="436.0" text="Username">
+      <TextField fx:id="usernameField" layoutX="420.0" layoutY="362.0" prefHeight="59.0" prefWidth="436.0" promptText="Username">
          <font>
             <Font size="24.0" />
          </font>
       </TextField>
-      <MenuButton layoutX="895.0" layoutY="368.0" mnemonicParsing="false" text="Select Number Of Players">
-        <items>
-          <MenuItem mnemonicParsing="false" text="2 Players" />
-          <MenuItem mnemonicParsing="false" text="3 Players" />
-            <MenuItem mnemonicParsing="false" text="4 Players" />
-        </items>
-         <font>
-            <Font size="24.0" />
-         </font>
-      </MenuButton>
       <Button fx:id="submitUsernameAndPlayersButton" layoutX="564.0" layoutY="454.0" mnemonicParsing="false" onAction="#onClickSubmitUsernamePlayerButton" prefHeight="69.0" prefWidth="133.0" text="Submit">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
+      <ComboBox fx:id="numberPlayersMenu" layoutX="888.0" layoutY="379.0" prefWidth="150.0" promptText="Select N° Players" />
    </children>
 </AnchorPane>
