--- a/src/main/resources/Socket_RMI_Requests.fxml
+++ b/src/main/resources/Socket_RMI_Requests.fxml
@@ -1,43 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="465.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="465.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="505.0" fitWidth="788.0">
+      <ImageView id="wallpaper" fitHeight="505.0" fitWidth="788.0">
          <image>
             <Image url="@Publisher material/Display_3.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="88.0" fitWidth="310.0">
-         <image>
-            <Image url="@Publisher material/Title 2000x618px.png" />
-         </image>
-      </ImageView>
-      <HBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="91.0" prefWidth="205.0">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
-            <Button fx:id="socketButton" mnemonicParsing="false" onAction="#onClickSocketButton" prefHeight="49.0" prefWidth="101.0" text="Socket">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
-            <Pane prefHeight="200.0" prefWidth="30.0" />
-            <Button fx:id="RMIButton" mnemonicParsing="false" onAction="#onClickRMIButton" prefHeight="49.0" prefWidth="101.0" text="RMI">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
+            <ImageView fitHeight="88.0" fitWidth="310.0">
+               <image>
+                  <Image url="@Publisher material/Title 2000x618px.png" />
+               </image>
+            </ImageView>
+            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="91.0" prefWidth="205.0" spacing="10.0">
+               <children>
+                  <Button id="socketbutton" fx:id="socketButton" mnemonicParsing="false" onAction="#onClickSocketButton" prefHeight="49.0" prefWidth="101.0" text="Socket">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button id="rmibutton" fx:id="RMIButton" mnemonicParsing="false" onAction="#onClickRMIButton" prefHeight="49.0" prefWidth="101.0" text="RMI">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
-         <StackPane.margin>
-            <Insets top="100.0" />
-         </StackPane.margin>
-      </HBox>
+      </VBox>
    </children>
 </StackPane>
