Modifie path in GameView.fxml

--- a/src/main/resources/Gameview.fxml
+++ b/src/main/resources/Gameview.fxml
@@ -48,7 +48,7 @@
                                        <children>
                                           <ImageView id="firstcommongoal" fitHeight="131.0" fitWidth="200.0">
                                              <image>
-                                                <Image url="@common%20goal%20cards/back.jpg" />
+                                                <Image url="@common goal cards/back.jpg" />
                                              </image>
                                              <effect>
                                                 <DropShadow />
@@ -65,7 +65,7 @@
                                        <children>
                                           <ImageView id="secondcommongoal" fitHeight="131.0" fitWidth="200.0">
                                              <image>
-                                                <Image url="@common%20goal%20cards/back.jpg" />
+                                                <Image url="@common goal cards/back.jpg" />
                                              </image>
                                              <effect>
                                                 <DropShadow />
@@ -85,7 +85,7 @@
                                                 <DropShadow />
                                              </effect>
                                              <image>
-                                                <Image url="@personal%20goal%20cards/back.jpg" />
+                                                <Image url="@personal goal cards/back.jpg" />
                                              </image>
                                           </ImageView>
                                        </children>
@@ -471,7 +471,7 @@
                                           </ImageView>
                                           <ImageView fitHeight="54.0" fitWidth="54.0" layoutX="375.0" layoutY="385.0" pickOnBounds="true" preserveRatio="true" rotate="9.8">
                                              <image>
-                                                <Image url="@scoring%20tokens/end%20game.jpg" />
+                                                <Image url="@scoring tokens/end game.jpg" />
                                              </image>
                                              <effect>
                                                 <InnerShadow />
@@ -479,22 +479,22 @@
                                           </ImageView>
                                           <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="39.0" layoutY="103.0" pickOnBounds="true" preserveRatio="true" rotate="95.7">
                                              <image>
-                                                <Image url="@item%20tiles/Cornici1.2.png" />
+                                                <Image url="@item tiles/Cornici1.2.png" />
                                              </image>
                                           </ImageView>
                                           <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="58.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true" rotate="-69.4">
                                              <image>
-                                                <Image url="@item%20tiles/Piante1.3.png" />
+                                                <Image url="@item tiles/Piante1.3.png" />
                                              </image>
                                           </ImageView>
                                           <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="69.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true" rotate="153.4">
                                              <image>
-                                                <Image url="@item%20tiles/Giochi1.3.png" />
+                                                <Image url="@item tiles/Giochi1.3.png" />
                                              </image>
                                           </ImageView>
                                           <ImageView fitHeight="125.0" fitWidth="122.0" layoutX="-42.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" rotate="146.1">
                                              <image>
-                                                <Image url="@misc/Sacchetto%20Aperto.png" />
+                                                <Image url="@misc/Sacchetto Aperto.png" />
                                              </image>
                                           </ImageView>
                                        </children>
