--- a/src/main/resources/Gameview.fxml
+++ b/src/main/resources/Gameview.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.GaussianBlur?>
@@ -758,11 +761,30 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <VBox id="bookshelf3" alignment="CENTER" prefHeight="838.0" prefWidth="362.0">
+                  <VBox id="bookshelf3" alignment="BOTTOM_CENTER" prefHeight="838.0" prefWidth="362.0" spacing="10.0">
                      <children>
-                        <TitledPane opacity="0.71" prefHeight="474.0" prefWidth="362.0">
+                        <TitledPane opacity="0.71" prefHeight="436.0" prefWidth="362.0">
                            <content>
-                              <TextFlow id="chatframe" prefHeight="438.0" prefWidth="360.0" />
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <children>
+                                    <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="349.0" prefWidth="340.0">
+                                       <content>
+                                          <TextFlow id="chatframe" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="317.0" prefWidth="325.0" />
+                                       </content>
+                                    </ScrollPane>
+                                    <HBox alignment="CENTER" prefHeight="60.0" prefWidth="340.0">
+                                       <children>
+                                          <TextArea fx:id="chatTextArea" prefHeight="55.0" prefWidth="224.0" promptText="Type your message here" />
+                                          <VBox prefHeight="200.0" prefWidth="100.0">
+                                             <children>
+                                                <ChoiceBox fx:id="chatChoiceBox" prefWidth="150.0" />
+                                                <Button id="sendButton" fx:id="sendButton" mnemonicParsing="false" onAction="#onSendMessage" text="Button" />
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
                            </content>
                         </TitledPane>
                         <StackPane id="mybookshelf" alignment="BOTTOM_CENTER" disable="true" prefHeight="354.0" prefWidth="362.0">
